Rudimentale implementazione delle query